# firmware-test

./: Cargo.toml  INFO.md  README.md
assets/: get_device_conf.txt
public/: index.html
public/scripts/: main.js
public/styles/: main.css
src/: main.rs
