[package]
name = "firmware_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["query", "multipart"] }
http = "0.2.9"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["io"] }
tower-http = { version = "0.4.4", features = ["trace", "cors", "limit"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
